--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -61,6 +61,7 @@ body {
     }
     
     app-review,
+    app-review-doc,
     app-admin-user-editor, 
     app-user-editor {
       grid-column: 2/7;
