--- a/frontend/src/core/sidebar/sidebar.component.html
+++ b/frontend/src/core/sidebar/sidebar.component.html
@@ -1,13 +1,24 @@
 <div class="sidebar">
   <ul>
-    <li *ngIf="(role$ | async)?.role === 'admin'">
-      <a (click)="navigateToAdminUserEditor()">User editor</a>
+    <li 
+      *ngIf="(role$ | async)?.role === 'admin'"
+      (click)="navigateToAdminUserEditor()">
+      <a>User editor</a>
     </li>
-    <li>
-      <a (click)="navigateToFav()">Favourites</a>
+    <li 
+      *ngIf="(role$ | async)?.role === 'admin'"
+      (click)="navigateToBookmarkEditor()">
+      <a>Bookmark editor</a>
+    </li>
+    <li (click)="navigateToFav()">
+      <a>Favourites</a>
     </li>
   </ul>
   <ul *ngFor="let item of bookmark$ | async">
-    <li *ngIf="item.position === 'RIGHT'"(click)="navigateToSubpage(item.title)"><a >{{item.title}}</a></li>
+    <li 
+      *ngIf="item.position === 'RIGHT'"
+      (click)="navigateToSubpage(item.title)">
+      <a >{{item.title}}</a>
+    </li>
   </ul>
 </div>
