--- a/frontend/src/core/sidebar/sidebar.component.scss
+++ b/frontend/src/core/sidebar/sidebar.component.scss
@@ -3,9 +3,8 @@
 div {
     position: static;
     background-color: $sec-back-color;
-    margin-top:60px;
-    width: 70%;
     text-transform: uppercase;
+    box-shadow: 0px 0px 9px 3px rgba(0, 0, 0, 0.3);
 
     ul {
         list-style: none;
