--- a/frontend/src/shared/components/subpage-container/subpage-container.component.scss
+++ b/frontend/src/shared/components/subpage-container/subpage-container.component.scss
@@ -1,12 +1,16 @@
+@import '../../../assets/main-style.scss';
+
 .subpage {
     max-width: 80%;
         h1 {
             margin-top: 40px;
-            margin-bottom: 40px;
+            margin-bottom: 20px;
             text-align: center;
+            color: $main-color;
         }
 
         p{
             margin: 0 auto;
+            text-indent: 30px;
         }
 }
