lots of work needed

--- a/frontend/src/editor/editor-view/editor-view.component.html
+++ b/frontend/src/editor/editor-view/editor-view.component.html
@@ -1,4 +1,4 @@
 <section *ngFor="let p of (pages$ | async)">
-    <app-text-page [page]="p"></app-text-page>
+    <app-text-page></app-text-page>
 </section>
 
