--- a/frontend/src/editor/text-page/text-page.component.scss
+++ b/frontend/src/editor/text-page/text-page.component.scss
@@ -1,13 +1,10 @@
 @import "../../assets/main-style.scss";
 
 .container {
-  border-bottom: 3em $main-font-color solid;
-  border-top: 3em $main-font-color solid;
+  border: 3em $main-font-color solid;
   background: $main-font-color;
   color: #000000;
-  height: 1000px;
+  height: 250vh;
   margin: 2em;
-  padding: 0 3em;
-  width: 100%;
-  word-break: break-all;
+  width: 50vw;
 }
