--- a/frontend/src/editor/text-page/text-page.component.scss
+++ b/frontend/src/editor/text-page/text-page.component.scss
@@ -1,11 +1,13 @@
 @import "../../assets/main-style.scss";
 
 .container {
-  border: 3em $main-font-color solid;
+  border-bottom: 3em $main-font-color solid;
+  border-top: 3em $main-font-color solid;
   background: $main-font-color;
   color: #000000;
-  height: 250vh;
-  margin: 2em;
+  height: 200vh;
+  margin: 2em 0;
+  padding: 0 3em;
   width: 100%;
   word-break: break-all;
 }
