added toolbox with buttons

--- a/frontend/src/editor/edit-toolbox/edit-toolbox.component.scss
+++ b/frontend/src/editor/edit-toolbox/edit-toolbox.component.scss
@@ -1,8 +1,8 @@
 @import "../../assets/main-style.scss";
 
-.controls{
+.toolbox{
     position: fixed;
-    top: 350px;
+    top: 100px;
     left: 65%;
     width: 3em;
     > * {
