--- a/frontend/src/editor/editor-view/editor-view.component.html
+++ b/frontend/src/editor/editor-view/editor-view.component.html
@@ -1,5 +1,6 @@
 <section>
     <app-text-page></app-text-page>
+    <app-edit-toolbox></app-edit-toolbox>
     <app-edit-controls></app-edit-controls>
 </section>
 
