--- a/frontend/src/editor/text-page/text-page.component.scss
+++ b/frontend/src/editor/text-page/text-page.component.scss
@@ -5,7 +5,7 @@
   border-top: 3em $main-font-color solid;
   background: $main-font-color;
   color: #000000;
-  height: 200vh;
+  height: 1000px;
   margin: 2em 0;
   padding: 0 3em;
   width: 100%;
