--- a/frontend/src/editor/edit-toolbox/bold-btn/bold-btn.component.html
+++ b/frontend/src/editor/edit-toolbox/bold-btn/bold-btn.component.html
@@ -1,3 +1,3 @@
-<button class="toolbox__button">
+<button class="toolbox__button" (click)="toggleBold()">
   <i class="fa fa-bold" aria-hidden="true"></i>
 </button>
