cite button still needs action

--- a/frontend/src/editor/edit-toolbox/cite-btn/cite-btn.component.html
+++ b/frontend/src/editor/edit-toolbox/cite-btn/cite-btn.component.html
@@ -1,3 +1,3 @@
-<button class="toolbox__button">
+<button class="toolbox__button" (click)="toggleQuoteMarks()">
   <i class="fa fa-quote-right" aria-hidden="true"></i>
 </button>
