--- a/frontend/src/editor/edit-toolbox/under-btn/under-btn.component.html
+++ b/frontend/src/editor/edit-toolbox/under-btn/under-btn.component.html
@@ -1,3 +1,3 @@
-<button class="toolbox__button">
+<button class="toolbox__button" (click)="toggleUnderline()">
   <i class="fa fa-underline" aria-hidden="true"></i>
 </button>
