--- a/frontend/src/editor/edit-toolbox/italic-btn/italic-btn.component.html
+++ b/frontend/src/editor/edit-toolbox/italic-btn/italic-btn.component.html
@@ -1,3 +1,3 @@
-<button class="toolbox__button">
+<button class="toolbox__button" (click)="toggleItalic()">
   <i class="fa fa-italic" aria-hidden="true"></i>
 </button>
