--- a/frontend/src/editor/edit-controls/cancel-btn/cancel-btn.component.html
+++ b/frontend/src/editor/edit-controls/cancel-btn/cancel-btn.component.html
@@ -1,3 +1,3 @@
-<button class="controls__button">
+<button class="controls__button" routerLink="/main">
   <i class="fa fa-times" aria-hidden="true"></i>
 </button>
