--- a/frontend/src/shared/components/button/button.component.scss
+++ b/frontend/src/shared/components/button/button.component.scss
@@ -66,7 +66,8 @@
     cursor:pointer;
   }
 
-  .user-editor__disconnect-FB-modal-container-button{background: $main-color;
+  .user-editor__disconnect-FB-modal-container-button{
+    background: $main-color;
     border: none;
     color: $main-font-color;
     cursor: pointer;
