todo: pdf gen with tags

--- a/frontend/src/editor/edit-controls/save-btn/save-btn.component.html
+++ b/frontend/src/editor/edit-controls/save-btn/save-btn.component.html
@@ -1,3 +1,3 @@
-<button class="controls__button">
+<button class="controls__button" (click)="savePDF()">
   <i class="fa fa-save" aria-hidden="true"></i>
 </button>
