--- a/frontend/src/shared/components/image/image.component.scss
+++ b/frontend/src/shared/components/image/image.component.scss
@@ -11,6 +11,17 @@
     }
 }
 
+.user-editor__profile-img, .admin-user-editor__profile-img{
+    width: 95px;
+    height: 95px;
+    margin-bottom: 15px;
+
+    @media(min-width:640px) {
+        width: 130px;
+        height: 130px;
+    }
+}
+
 .navbar {
     width: 100px;
     height: 80px;
