got data needed to send to db, needs service

--- a/frontend/src/editor/edit-controls/send-btn/send-btn.component.html
+++ b/frontend/src/editor/edit-controls/send-btn/send-btn.component.html
@@ -1,3 +1,3 @@
-<button class="controls__button">
+<button class="controls__button" (click)="sendPDF()">
   <i class="fa fa-paper-plane" aria-hidden="true"></i>
 </button>
