--- a/frontend/src/core/sidebar/sidebar.component.scss
+++ b/frontend/src/core/sidebar/sidebar.component.scss
@@ -5,6 +5,11 @@ div {
     background-color: $sec-back-color;
     text-transform: uppercase;
     box-shadow: 0px 0px 9px 3px rgba(0, 0, 0, 0.3);
+    font-size: 0.8rem;
+    
+            @media(min-width:640px) {
+                font-size: 1rem;
+            }
 
     ul {
         list-style: none;
