--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -48,16 +48,25 @@ body {
         app-sidebar {
             grid-column: 7/9;
             grid-row: 2/3;
-            width: 70%;
+            width: 100%;
             margin-top: 48px;
+
+            @media(min-width:$tablet) {
+              width: 70%;
+          }
 
         }
         
         app-bookmark-panel {
-            grid-column:  1/8;
+            grid-column:  1/7;
             grid-row: 2/3;
-            margin: 0 auto;
+            // margin: 0 auto;
+
+            @media (min-width: $desktop) {
+              grid-column: 1/8;
+            }
         }
+
 
     app-boorkmark-creator {
       grid-row: 1/7;
