--- a/frontend/src/core/nav/nav.component.scss
+++ b/frontend/src/core/nav/nav.component.scss
@@ -6,7 +6,7 @@ header {
   height: 75px;
   box-shadow:  3px 2px 25px rgba(0, 0, 0, 0.75);
 
-  @media (min-width: tablet) {
+  @media (min-width: 640px) {
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -19,26 +19,38 @@ header {
   }
 
   label {
-    display: block;
+    display: inline-block;
+    text-align: center;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    margin: 5px;
     cursor: pointer;
     font-size: 25px;
-    padding-top: 10px;
-    padding-left: 10px;
-    padding-bottom: 10px;
-    // padding: 5px;
-    @media (min-width: $tablet) {
+    // padding-top: 20px;
+    // padding-left: 20px;
+    // padding-bottom: 10px;
+
+    &:hover{
+      border-radius: 50%;
+      background-color: rgba(0,0,0,0.2);
+
+    }
+
+    @media (min-width: 640px) {
         display: none;
     }
   }
   
   nav {
       display: none;
-      @media (min-width: $tablet) {
+      @media (min-width: 640px) {
           display: flex;
           align-items: center;
           align-content: center;
           justify-content: space-between;
           height: 75px;
+          width: 100vw;
           
       }
   }
@@ -49,12 +61,13 @@ header {
       z-index: 100;
       position: absolute;
       width: 100vw;
-      height: 150vh;
+      height: 100%;
+      text-align: center;
   }
 
 
   .logo-bookmarks-container {
-    @media (min-width: $tablet) {
+    @media (min-width: 640px) {
       display: flex;
       flex-direction: row;
       align-content: center;
@@ -73,7 +86,7 @@ header {
     .logo {
       display: none;
 
-      @media (min-width: $tablet) {
+      @media (min-width: 640px) {
         display: block;
         padding: 10px 5px;
         margin-right: 30px;
@@ -81,7 +94,7 @@ header {
       }
 
       a {
-        @media (min-width: $tablet) {
+        @media (min-width: 640px) {
           border: none;
         }
       }
@@ -92,6 +105,13 @@ header {
     display:inline-block;
     position:relative;
     margin-right: 40px;
+    margin-top: 20px;
+
+    @media (min-width: 640px) {
+      margin-top: 0;
+    }
+
+
 
     .dropdown--list {
       background-color:#fff;
@@ -134,7 +154,7 @@ header {
         background-color: rgba(224, 169, 5, 0.6);
       }
 
-      @media (min-width: $tablet) {
+      @media (min-width: 640px) {
         border-bottom: none;
         padding-right: 15px;
       }
