--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -130,5 +130,10 @@ body {
       grid-column: 2/6;
       grid-row: 2/3;
     }
+
+    app-error-page {
+      grid-column: 1/7;
+      grid-row: 2/3;
+    }
   }
 }
