these are last fixes to picture upload, i swear

--- a/frontend/src/core/register/register.component.html
+++ b/frontend/src/core/register/register.component.html
@@ -109,6 +109,7 @@
                   [id]="'file'"
                   [formInputStyle]="'register-form__file'" 
                   [type]="'file'" 
+                  [controlName]="registerForm.controls.pic"
                   [accept]="'image/*'"
                   (change)="pictureUpload($event)">
               </app-input>
