--- a/frontend/src/editor/editor-view/editor-view.component.html
+++ b/frontend/src/editor/editor-view/editor-view.component.html
@@ -1,4 +1,5 @@
 <section>
+    <app-alert></app-alert>
     <app-text-page></app-text-page>
     <app-edit-toolbox></app-edit-toolbox>
     <app-edit-controls></app-edit-controls>
