--- a/frontend/src/core/nav/nav.component.scss
+++ b/frontend/src/core/nav/nav.component.scss
@@ -95,6 +95,24 @@ header {
     }
   }
 
+  .navbar-user-info {
+    display: flex;
+    justify-content: flex-end;
+    text-align: center;
+    justify-items: center;
+    width: 100%;
+    align-items: center;
+
+    .img-wrapper{
+      width: 75px
+    }
+    .av{
+      width: 50px;
+      height: 50px;
+    }
+
+  }
+
   .dropdown{
     display:inline-block;
     position:relative;
