working editor alert handling

--- a/frontend/src/editor/alert/alert.component.html
+++ b/frontend/src/editor/alert/alert.component.html
@@ -1,5 +1,5 @@
-<div [ngSwitch]="alert?.type">
-  <app-error *ngSwitchCase="'error'">ACHTUNG!</app-error>
-  <app-error [class]="'error-msg'" *ngSwitchCase="'success'">good boi</app-error>
+<div class="edit-alert" [ngSwitch]="alert?.type">
+  <app-error [class]="'edit-alert__error'" *ngSwitchCase="'error'">{{alert.message}}</app-error>
+  <app-success [class]="'edit-alert__success'" *ngSwitchCase="'success'">{{alert.message}}</app-success>
   <p *ngSwitchDefault></p>
 </div>
