--- a/frontend/src/review/review-doc/review-doc.component.html
+++ b/frontend/src/review/review-doc/review-doc.component.html
@@ -4,7 +4,7 @@
   (mouseup)="onMouseUp($event)" 
   (mousedown)="hideTooltip()"></app-doc>
   
-  
+  <app-comments [comments]="comments"></app-comments>
 
   <app-tooltip 
     [tooltipPositionStyles]="tooltipPositionStyles" 
