--- a/frontend/src/core/error-page/error-page.component.html
+++ b/frontend/src/core/error-page/error-page.component.html
@@ -2,7 +2,13 @@
   <h1 class="error-container__header">
     404
   </h1>
-  <p class="error-container--info">Ooops, the page you're looking for doesn't exist.</p>
-  <app-button [class]="'error-container__button'" (clickEvent)="navigateToMain()">Back to home page </app-button>
+  <p class="error-container--info">
+    Ooops, the page you're looking for doesn't exist.
+  </p>
+  <app-button 
+    [class]="'error-container__button'" 
+    (clickEvent)="navigateToMain()">
+    Back to home page 
+  </app-button>
 <div>
 
