made edited doc title and fixed paragraph pasting

--- a/frontend/src/editor/text-page/text-page.component.html
+++ b/frontend/src/editor/text-page/text-page.component.html
@@ -1,1 +1,13 @@
+<app-label labelStyle="edit-title" for="title">Title:</app-label>
+<app-textbox 
+    #title id="title" 
+    placeholder="New Title" 
+    textboxStyle="edit-title"
+    (keydown)="titleExists()"
+    >
+</app-textbox>
+<div *ngIf="!titleStatus">
+    <app-error class="error-msg">Title Required</app-error>
+</div>
+
 <p #page class="container" contenteditable="true"></p>
