--- a/frontend/src/shared/components/label/label.component.scss
+++ b/frontend/src/shared/components/label/label.component.scss
@@ -51,3 +51,12 @@
        background-color:  #e08505
     }
 }
+
+.edit-title {
+    color: $main-color;
+    display: inline-block;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 1em;
+    width: 15%;
+}
