waitng for prs to merge

--- a/frontend/src/editor/edit-controls/edit-controls.component.html
+++ b/frontend/src/editor/edit-controls/edit-controls.component.html
@@ -2,5 +2,6 @@
   <app-cancel-btn></app-cancel-btn>
   <app-save-btn></app-save-btn>
   <app-send-btn></app-send-btn>
+  <app-upload-btn></app-upload-btn>
 </div>
 
