--- a/frontend/src/editor/text-page/text-page.component.html
+++ b/frontend/src/editor/text-page/text-page.component.html
@@ -1,1 +1,9 @@
-<p #page class="container" contenteditable="true"></p>
+<p #page class="container" contenteditable="true">
+    <span *ngIf="allpages">
+        <div *ngFor="let page of allpages">
+            <p *ngFor="let line of page.items">
+                {{line.str}}
+            </p>
+        </div>
+    </span>
+</p>
