--- a/frontend/src/shared/components/label/label.component.scss
+++ b/frontend/src/shared/components/label/label.component.scss
@@ -51,3 +51,16 @@
        background-color:  #e08505
     }
 }
+
+.doc-editor__upload-pdf {
+    background: $sec-back-color;
+    border: 1px $main-font-color solid;
+    color: $main-font-color;
+    font-size: 24px;
+    height: 48px;
+    width: 100%;
+    
+    &:active {
+        border: 2px $main-font-color solid;
+    }
+}
