fix to pasting text

--- a/frontend/src/editor/text-page/text-page.component.scss
+++ b/frontend/src/editor/text-page/text-page.component.scss
@@ -6,7 +6,7 @@
   background: $main-font-color;
   color: #000000;
   font-family: sans-serif;
-  height: 1000px;
+  min-height: 1000px;
   margin: 2em 0;
   padding: 0 3em;
   width: 100%;
