--- a/frontend/src/editor/text-page/text-page.component.scss
+++ b/frontend/src/editor/text-page/text-page.component.scss
@@ -5,6 +5,7 @@
   border-top: 3em $main-font-color solid;
   background: $main-font-color;
   color: #000000;
+  display: inline-block;
   font-family: sans-serif;
   min-height: 1000px;
   margin: 2em 0;
