--- a/frontend/src/shared/components/label/label.component.scss
+++ b/frontend/src/shared/components/label/label.component.scss
@@ -64,3 +64,12 @@
         border: 2px $main-font-color solid;
     }
 }
+
+.edit-title {
+    color: $main-color;
+    display: inline-block;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 1em;
+    width: 15%;
+}
