--- a/frontend/src/editor/text-page/text-page.component.html
+++ b/frontend/src/editor/text-page/text-page.component.html
@@ -1,9 +1,12 @@
+<button (click)="elo()">elo</button>
+
 <app-label labelStyle="edit-title" for="title">Title:</app-label>
 <app-textbox 
     #title id="title" 
     placeholder="New Title" 
     textboxStyle="edit-title"
     (keydown)="titleExists()"
+    value="{{loadedTitle}}"
     >
 </app-textbox>
 <div *ngIf="!titleStatus">
@@ -11,11 +14,30 @@
 </div>
 
 <p #page class="container" contenteditable="true">
-        <span *ngIf="allpages">
-            <div *ngFor="let page of allpages">
-                <p *ngFor="let line of page.items">
-                    {{line.str}}
-                </p>
-            </div>
-        </span>
+    <span *ngIf="allpages">
+        <div  *ngFor="let page of allpages">
+            <p *ngFor="let line of page.items">
+                {{line.str}}
+            </p>
+        </div>
+    </span>
+</p>
+
+<app-modal [(visible)]="showModal" (visibleChange)="changeKeep($event)">
+    <p>
+        Your document is not empty. Loading new file will swap current document you are working on.
+        If you have not saved your current document, all changes will be lost.
+        Are you sure you want to load new document?
     </p>
+    <app-button
+        [class]=''
+        (clickEvent)="swap()">
+            Yes
+
+    </app-button>
+    <app-button
+        [class]=''
+        (clickEvent)="showModal = !showModal">
+        No
+    </app-button>
+</app-modal>
