refactoring lufeczkas code, still needs upload fixes

--- a/frontend/src/editor/text-page/text-page.component.html
+++ b/frontend/src/editor/text-page/text-page.component.html
@@ -9,19 +9,12 @@
     value="{{loadedTitle}}"
     >
 </app-textbox>
+
 <div *ngIf="!titleStatus">
     <app-error class="error-msg">Title Required</app-error>
 </div>
 
-<p #page class="container" contenteditable="true">
-    <span *ngIf="allpages">
-        <div  *ngFor="let page of allpages">
-            <p *ngFor="let line of page.items">
-                {{line.str}}
-            </p>
-        </div>
-    </span>
-</p>
+<p #page class="container" contenteditable="true"></p>
 
 <app-modal [(visible)]="showModal" (visibleChange)="changeKeep($event)">
     <p>
