--- a/frontend/src/shared/components/label/label.component.scss
+++ b/frontend/src/shared/components/label/label.component.scss
@@ -56,9 +56,12 @@
     background: $sec-back-color;
     border: 1px $main-font-color solid;
     color: $main-font-color;
+    display: block;
     font-size: 24px;
     height: 48px;
+    padding: 8px 0;
     width: 100%;
+    text-align: center;
     
     &:active {
         border: 2px $main-font-color solid;
